fixed color scheme, fixed vertical align, fixed rotating pieces while caps lock is on

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,27 @@
 body {
     font-family: 'Allerta Stencil'; 
-    background-color: #EAF3FF;
+    background-color: white;
+    padding: 0;
+    margin: 0;
+    width: 100%;
+    height: 100%;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
+}
+
+html {
+    height: 100%;
+    width: 100%;
+}
+
+#root {
+    width: 100%;
+    padding-bottom: 3%;
 }
 
 .flex-container {
+    flex: 1;
     display: flex; 
     justify-content: center;
 }
@@ -11,6 +29,7 @@ body {
 #title, #title-next-piece {
     margin: 5px;
     text-align: center;
+    padding-bottom: 5px;
 }
 
 #title-next-piece {
