--- a/src/Tile.css
+++ b/src/Tile.css
@@ -11,7 +11,7 @@
 }
 
 .empty {
-    background-color: #D6E8FD;
+    background-color: #EAF3FF;
 }
 
 .shadow {
